# bigkidsuperhero

./: .gitignore  AGENTS.md  Cargo.toml  pixel_art_sprite_sheet_guide.md
assets/: srs.md
scratch/: center_sprites.py  fix_spritesheet.py
scripts/: center_sprites.py  remove_bg.py  sprite_pipeline.py
src/: levels.rs  main.rs
src/audio/: audio.rs  mod.rs
src/components/: animation.rs  level.rs  map.rs  menu.rs  mod.rs  particles.rs  player.rs  resources.rs  ui.rs
src/gameplay/: camera.rs  collectibles.rs  hazards.rs  mod.rs  moving_platforms.rs  player.rs  win_condition.rs
src/screens/: character_select.rs  map_screen.rs  menu.rs  mod.rs  win_screen.rs
src/systems/: animation.rs  mod.rs  particles.rs  persistence.rs  ui.rs
