[package]
name = "bigkidsuperhero_platformer"
version = "0.1.0"
edition = "2024"

[features]
dev = ["bevy/dynamic_linking"]

[dependencies]
bevy = { version = "0.15", features = ["mp3"] }
rand = "0.10.1"
rand_xoshiro = "0.8.0"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3
